# privaxy

./: .gitignore  Cargo.toml
filter_list/: Cargo.toml
filter_list/lists/: default.json
filter_list/src/: main.rs
privaxy/: Cargo.toml
privaxy/src/server/: main.rs
privaxy/src/server/web_gui/: blocking_enabled.rs  custom_filters.rs  exclusions.rs  mod.rs
web_frontend/: Cargo.toml  index.html  package.json  vite.config.ts
web_frontend/patches/: braid-design-system+31.17.1.patch
web_frontend/src/: App.tsx  Navbar.tsx  helper.ts  main.tsx
web_frontend/src/assets/: IconPause.tsx  IconPlay.tsx  IconPulsatingCircle.tsx
web_frontend/src/requests/: useBlocking.ts  useCustomFilterList.ts  useFilters.ts  wretcher.ts
web_frontend/src/routes/: routes.tsx
web_frontend/src/routes/Dashboard/: BlockingEnabled.tsx  index.tsx
web_frontend/src/routes/Requests/: index.tsx
web_frontend/src/routes/Settings/: CustomFilter.tsx  Exclusions.tsx  Filters.tsx  FreeText.tsx  index.tsx
