[package]
name = "filter_list"
version = "0.3.0"
edition = "2021"

[dependencies]
async-recursion = "1.0"
chrono = "0.4"
log = "0.4"
fern = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
